--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -55,7 +55,8 @@
   </header>
 
   <div class="container-fluid">
-      <div class="row">
+    <p class="text-center" id="contentTitle">Our Menu</p>
+      <div class="row">      
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div id="menuTitle">
                 <a id="ChickenMenu">Chicken</a>
